Creado estructura del <headrer>: header.css

--- a/index.html
+++ b/index.html
@@ -7,10 +7,27 @@
     <title>Erik Herrera Llamas</title>
 
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="icon" type="svg" href="assets/svg/code.svg">
+    <link rel="icon" href="assets/svg/code.svg">
 </head>
 
 <body>
+
+    <header>
+        <nav>
+            <div>Inicio</div>
+            <div>Sobre Mi</div>
+            <div>Proyectos</div>
+            <div>Contacto</div>
+        </nav>
+        <nav>
+            <div>
+                <img src="assets/svg/linkedin.svg" alt="LinkedIn">
+            </div>
+            <div>
+                <img src="assets/svg/github_light.svg" alt="GitHub">
+            </div>
+        </nav>
+    </header>
 
 </body>
 
