--- a/index.html
+++ b/index.html
@@ -51,15 +51,12 @@
 
 
     <main>
-        <div class="hero">
-            <div class="hero-content">
-                <h1>Erik Herrera Llamas</h1>
-                <p>
-                    Soy un <span style="color: rgb(0, 150, 255);">Desarrollador Web Full-Stack</span> y <br> un <span
-                        style="color: rgb(0, 150, 255);">Técnico en Sistemas Microinformáticos y Redes</span>.
-                    <br><br>
-                </p>
-            </div>
+        <div class="hero inter">
+            <h1>ERIK HERRERA LLAMAS</h1>
+            <p>
+                Técnico Superior en <span>Desarrollo de Aplicaciones Web</span> <br> y en
+                <span>Sistemas Microinformáticos y Redes</span> en Madrid.
+            </p>
         </div>
     </main>
 
