Añadir sección "Sobre Mí" y mejorar estilos del 'hero' en index.html, hero.css, about-me.css

--- a/index.html
+++ b/index.html
@@ -50,12 +50,37 @@
     </header>
 
 
-    <main>
-        <div class="hero inter">
+    <main class="inter">
+        <div class="hero">
+            <div class="hero-img">
+                <img src="assets/images/me.png" alt="">
+            </div>
             <h1>ERIK HERRERA LLAMAS</h1>
             <p>
                 Técnico Superior en <span>Desarrollo de Aplicaciones Web</span> <br> y en
                 <span>Sistemas Microinformáticos y Redes</span> en Madrid.
+            </p>
+            <div class="availability">
+                Disponible para trabajar
+            </div>
+        </div>
+
+        <div class="separator"></div>
+
+        <div class="about-me">
+            <h1>SOBRE MÍ</h1>
+            <p>
+                Me llamo Erik y me considero un apasionado de la informática y las nuevas tecnologías. Todo esto empezó
+                cuando era muy pequeño, gracias a los videojuegos, los cuales me abrieron las puertas
+                al mundillo tecnológico.
+                <br><br>
+                Años más tarde decidí estudiar un grado medio relacionado con los sistemas y, a posteriori, un grado
+                superior más centrado en el desarrollo de páginas web y aplicaciones diseñadas para resolver problemas
+                reales.
+                <br><br>
+                Llevo ya dos años dentro del mundo de la programación como estudiante y actualmente me encuentro en la
+                búsqueda de mi primer empleo. Mi objetivo es seguir mejorando, aprendiendo y creciendo dentro de este
+                inmenso y maravilloso mundo.
             </p>
         </div>
     </main>
